outputs/tsp_constructive-constructive/2025-09-20_09-49-48/evaluations/problem_eval-183120533128088209_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (0.5) to prioritizing progress (closer to 1) as more nodes are visited.}
                                                                                      ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (0.5) to prioritizing progress (closer to 1) as more nodes are visited.}
                                                                                      ^
SyntaxError: unmatched '}'
